# raytracer

./: .gitignore  CMakeLists.txt  README.md
include/: cApp.hpp  cMain.hpp  chapter_tests.hpp  features.hpp  linalg.hpp  main.hpp  render_objects.hpp  save_ppm.hpp  world.hpp
src/: cApp.cpp  cMain.cpp  chapter_tests.cpp  features.cpp  linalg.cpp  main.cpp  render_objects.cpp  save_ppm.cpp
src/output/: clock.ppm  ray_sphere.ppm  shaded_sphere.ppm
test/: CMakeLists.txt
test/include/: cMain.hpp
test/src/: cMain.cpp
